--- a/ticker.html
+++ b/ticker.html
@@ -121,7 +121,7 @@
 
         async function fetchMarkets() {
             try {
-                const response = await fetch('https://gamma-api.polymarket.com/markets?limit=100&closed=false', {
+                const response = await fetch('https://polymarket-proxy.alex-f49.workers.dev/', {
                     method: 'GET',
                     headers: {
                         'Accept': 'application/json',
